--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia Alura</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,8 +13,8 @@
     <h1>Sobre la barberia Alura</h1>
 
 <p>Ubicada en el corazón de la ciudad, la <strong> Barberia Alura</strong> trae para el mercado lo que hay de mejor para su cabello y abrba. Fundada en 2020, la barberia Alura destaco en la ciudad y conquista nuevos clientes diairiamente.</p>
-<p><em>Nuestra misión es: <strong>"proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
-<p> ofrecemos profecionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para asi ofrecer a nuestros clientes las ultimas tendencias. El servicio posee un padrön de excelencia y agilidad, garantizando la calidad y satisfaccion de nuestros cleintes. </p>
+<p style="font-size: 20px"><em>Nuestra misión es: <strong>"proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
+<p> Ofrecemos profecionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para asi ofrecer a nuestros clientes las ultimas tendencias. El servicio posee un padrön de excelencia y agilidad, garantizando la calidad y satisfaccion de nuestros cleintes. </p>
     
 </body>
 </html>
