--- a/index.html
+++ b/index.html
@@ -10,11 +10,37 @@
 
 <body>
 
-    <h1>Sobre la barberia Alura</h1>
+    <img id="banner" src="banner/banner.jpg" >
 
-<p>Ubicada en el corazón de la ciudad, la <strong> Barberia Alura</strong> trae para el mercado lo que hay de mejor para su cabello y abrba. Fundada en 2020, la barberia Alura destaco en la ciudad y conquista nuevos clientes diairiamente.</p>
-<p style="font-size: 20px"><em>Nuestra misión es: <strong>"proporcionar autoestima y calidad de vida a nuestros clientes"</strong>.</em></p>
-<p> Ofrecemos profecionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la moda, para asi ofrecer a nuestros clientes las ultimas tendencias. El servicio posee un padrön de excelencia y agilidad, garantizando la calidad y satisfaccion de nuestros cleintes. </p>
+    <div class="principal">
+
+        <h1>Sobre la barberia Alura</h1>
+
+        <p>Ubicada en el corazón de la ciudad, la <strong> Barberia Alura</strong> trae para el mercado lo que hay de mejor para su 
+        cabello y barba. 
+        Fundada en 2020, la barberia Alura destaco en la ciudad y conquista nuevos clientes diairiamente.</p>
+        <p id="mision"><em>Nuestra misión es: <strong>"proporcionar autoestima y calidad de vida a nuestros clientes" </strong>. 
+        </em></p>
+        <p> Ofrecemos profecionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la 
+        moda, para asi ofrecer a nuestros clientes las ultimas tendencias. El servicio posee un padrön de excelencia y 
+        agilidad, garantizando la calidad y satisfaccion de nuestros cleintes. </p>
+
+    </div>
+
+        <div class="diferenciales">
+
+            <h2>Diferenciales</h2>
+
+                <ul>
+    
+                    <li class="items"> Atencion personalizada a los clientes</li>
+                    <li class="items"> Espacio diferenciado</li>
+                    <li class="items"> Localizacion</li>
+                    <li class="items"> profecionales calificados</li>
+
+                </ul>
+
+        </div>
     
 </body>
 </html>
