--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
                 </ul>
 
+                <img  src="diferenciales/diferenciales.jpg" class="imagenDiferenciales">
+
         </div>
     
 </body>
