--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<header class="titulo">
+    <h1>Barberia Alura</h1>
+</header>
+
 <body>
 
     <img id="banner" src="banner/banner.jpg" >
 
     <div class="principal">
 
-        <h1>Sobre la barberia Alura</h1>
+        <h2>Sobre la barberia Alura</h2>
 
         <p>Ubicada en el corazón de la ciudad, la <strong> Barberia Alura</strong> trae para el mercado lo que hay de mejor para su 
         cabello y barba. 
@@ -29,7 +33,7 @@
 
         <div class="diferenciales">
 
-            <h2>Diferenciales</h2>
+            <h3>Diferenciales</h3>
 
                 <ul>
     
