--- a/contacto.html
+++ b/contacto.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="productos">Productos</a></li>
-                    <li><a href="contacto">Contacto</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,7 +37,7 @@
 
             <div>
 
-                <p>¿Como le gustaria que lo contactemos?</p>
+                <p class="test" id="test">¿Como le gustaria que lo contactemos?</p>
 
                 <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
                 
