--- a/contacto.html
+++ b/contacto.html
@@ -37,7 +37,7 @@
 
             <div>
 
-                <p class="test" id="test">¿Como le gustaria que lo contactemos?</p>
+                <p>¿Como le gustaria que lo contactemos?</p>
 
                 <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
                 
@@ -48,6 +48,27 @@
 
             </div>
 
+            <div>
+
+                <p>¿En que horario prefiere ser atendido?</p>
+
+            <select name="" id="">
+                <option value="">
+                    Mañana
+                </option>
+
+                <option value="">
+                    Tarde
+                </option>
+
+                <option value="">
+                    Noche
+                </option>
+            </select>
+
+            </div>
+
+            
             <label class="checkbox"><input type="checkbox"> ¿Le gustaria recibir novedaddes de la Barberia Alura? </label> 
 
             <input type="submit" value="Enviar Formulario"
